# Sentinel

./: .gitignore  README.md  build.sh  fastdds.xml  run.sh  servo_positions.json  start_engine_0.sh  start_engine_1.sh  valve_on.sh
client/: PCA9685Controller.py  pca9685_server.py  test_ros_connection.py
scripts/: build_gui.sh  pump_off.sh  pump_on.sh  server.sh  setup_env.sh  start_engine_2.sh  valve_off.sh
sentinel/: aaa0.py  aaa1.py  aaa2.py  canale0.py  canale1.py  prendi.py  pump_off.py  pump_on.py  send_commands.py  servo_control.py  servo_control_new.py  servo_positions.json  solenoid_off.py  solenoid_on.py  test0.py  test1.py  test2.py  test_con_angoli.py  test_due_motori.py  test_graduale.py  test_graduale_2.py  test_pca9685.py  test_piu_step.py  test_piu_step_2.py  test_super_fluido.py  test_tipo_servo.py
src/: mqtt_gpio_listener.py
src/custom_interfaces/: CMakeLists.txt  package.xml  package.xml.bak
src/custom_interfaces/action/: MoveMotors.action
src/custom_interfaces/srv/: EmergencyStop.srv  GetServoPosition.srv  PumpControl.srv  SetServoAngle.srv  StopServo.srv
src/robot_controller/: CMakeLists.txt  package.xml  setup.py
src/robot_controller/action/: MoveMotors.action
src/robot_controller/config/: params.yaml
src/robot_controller/launch/: robot_control_launch.py
src/sentinel_app/: CMakeLists.txt  motor_action_server.py$  package.xml  setup.cfg  setup.py
src/sentinel_app/action/: ControlDevice.action  MoveMotors.action  PickObject.action
src/sentinel_app/sentinel_app/: device_control_client.py  device_control_server.py  motor_action_client.py  motor_action_server.py  movement_manager.py  setup.py
src/sentinel_base/: package.xml  setup.cfg  setup.py
(+14 files in other folders)
